// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options renders to the DOM 1`] = `
<div
  className=""
  style={null}
>
  <div
    className={undefined}
    data-bubble-container={true}
  >
    <ul
      className={undefined}
    >
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        home
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        cat
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        dog
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        fish
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        hide
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        hover
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        duck
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        category
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        join
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        paper
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        box
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        tab
      </li>
    </ul>
  </div>
  <span
    className={undefined}
    data-bubble-arrow={true}
  />
</div>
`;

exports[`Options renders via optionRenderer 1`] = `
<div
  className=""
  style={null}
>
  <div
    className={undefined}
    data-bubble-container={true}
  >
    <ul
      className={undefined}
    >
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <div>
          <span>
            Frankreich
          </span>
          <span>
            France
          </span>
        </div>
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <div>
          <span>
            Spanien
          </span>
          <span>
            Spain
          </span>
        </div>
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <div>
          <span>
            Kroatien
          </span>
          <span>
            Croatia
          </span>
        </div>
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <div>
          <span>
            Vereinigten Staaten
          </span>
          <span>
            United States
          </span>
        </div>
      </li>
      <li
        className=""
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <div>
          <span>
            Österreich
          </span>
          <span>
            Austria
          </span>
        </div>
      </li>
    </ul>
  </div>
  <span
    className={undefined}
    data-bubble-arrow={true}
  />
</div>
`;

exports[`Options renders via render prop 1`] = `
<div
  className=""
  style={null}
>
  <div
    className={undefined}
    data-bubble-container={true}
  >
    <ul
      className={undefined}
    >
      <li>
        <span>
          home
        </span>
      </li>
      <li>
        <span>
          cat
        </span>
      </li>
      <li>
        <span>
          dog
        </span>
      </li>
      <li>
        <span>
          fish
        </span>
      </li>
      <li>
        <span>
          hide
        </span>
      </li>
      <li>
        <span>
          hover
        </span>
      </li>
      <li>
        <span>
          duck
        </span>
      </li>
      <li>
        <span>
          category
        </span>
      </li>
      <li>
        <span>
          join
        </span>
      </li>
      <li>
        <span>
          paper
        </span>
      </li>
      <li>
        <span>
          box
        </span>
      </li>
      <li>
        <span>
          tab
        </span>
      </li>
    </ul>
  </div>
  <span
    className={undefined}
    data-bubble-arrow={true}
  />
</div>
`;
